# smcandta

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: BOT_INTEGRATION.md  BROKER_ALERT_STATUS_MONITORING.md  BROKER_RESTART_SYNC.md  CHART_VISUALIZATION.md  CODEX_USAGE.md  DATA_QUALITY.md  DEMO_FORWARD_REPORTS.md  DEPLOYMENT_RUNBOOK.md  FINAL_AUDIT_REPORT.md  FOREX_MARKET_REALITY.md  HOSTED_MONITORING.md  INCIDENT_PROCEDURES.md  INSTRUMENTS.md  LIFECYCLE_RESTART_RECOVERY.md  LIVE_DASHBOARD_MONITORING.md  LIVE_TRADING_READINESS.md  NEWS_PROVIDERS.md  OANDA_EXECUTION_VALIDATION.md  OANDA_PRACTICE_HARDENING.md  OANDA_PRACTICE_STARTUP_MONITORING.md  PORTFOLIO_RISK.md  PREFLIGHT_READINESS.md  PROCESS_SUPERVISION.md  REPORT.md  RUNTIME_CONFIG.md  SECRETS_AND_LOGGING.md  TRADE_LIFECYCLE.md  WALK_FORWARD.md
examples/: analyze_csv.py  broker_restart_sync.py  check_runtime_config.py  check_secrets.py  demo_forward_report.py  demo_paper_loop.py  generate_ops_artifacts.py  incident_bundle.py  lifecycle_restart_recovery.py  live_dashboard_monitor.py  multi_timeframe_analysis.py  oanda_download.py  oanda_execution_validate.py  oanda_practice_check.py  oanda_practice_startup_monitor.py  portfolio_risk.py  render_analysis_chart.py  render_dashboard.py  run_backtest.py  run_preflight.py  serve_monitoring.py  trade_lifecycle.py  tradingeconomics_news.py  validate_data.py  walk_forward.py
smc_ta/: __init__.py  types.py  validation.py
tests/: test_advanced_features.py  test_broker_restart_sync.py  test_data_quality.py  test_demo_forward_reports.py  test_emergency_stop.py  (+22 more)
(+84 files in other folders)
